APPS-5078: position of undo/redo & settings button in suite/scientific header on smallScreen fixed

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
@@ -317,6 +317,11 @@ svg.icon.left {
 .compact.GeoGebraFrame .shareBtn, .compact.GeoGebraFrame .signIn {
     display: none;
 }
+
+.compact.GeoGebraFrame .undoRedoSettingsPanelScientific .settingsBtnScientific{
+	margin: 0px;
+}
+
 .GeoGebraHeader .signInIcon {
     display: none;
 }
